2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/SendingHandler.cs: debug
	* src/ReceivingHandler.cs: changed the encoding and it fixed a problems
	  getting the file name

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverMenuItem.cs: Added parameters to get the service from the
	  menu item
	* src/Application.cs: Added handlers to send files (well, test it)
	* src/Makefile.am: Added SendingHandler
	* src/PayloadInfo.cs: Added public property to get name
	* src/SendingHandler.cs: new class for sending files
	* src/ReceivingHandler.cs: debug message
	* giver.mdp: Added SendingHandlerClass

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverService.cs: Removed sample code
	* src/GiverMenuItem.cs: Comment correction
	* src/Application.cs: Updated application to handle incoming
	  connections
	* src/Makefile.am: ADded new files
	* src/PayloadInfo.cs: new class to hold payload info on a transfer
	* src/ReceivingHandler.cs: new class to handle incoming giver requests
	  and handle the transfer
	* giver.mdp: Added new files

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverService.cs: Added TcpListener for transferring files
	* src/Application.cs: Changed the stop order
	* giver.mdp: Added needed references

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverMenuItem.cs: Fixed the banter-44 icon to be giver-44
	* src/Application.cs: Fixed up icon so it's off if nobody is there

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverMenuItem.cs: Updated the alignment of the menu items

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/ComplexMenuItem.cs: code to handle cool new complex menu items
	* src/GiverMenuItem.cs: New menu item to handle graphics and such
	* src/Defines.cs.in: removed unneeded definitions
	* src/Application.cs: Added new menu support with graphics
	* src/ServiceLocator.cs: Updated to provide a count of current services
	  found
	* src/Makefile.am: Added new files