@@ -26,11 +26,11 @@ CSFILES = \
 
 RESOURCES = \
 	-resource:$(top_srcdir)/data/images/giver-16.png \
-	-resource:$(top_srcdir)/data/images/giver-22.png \
 	-resource:$(top_srcdir)/data/images/giver-24.png \
 	-resource:$(top_srcdir)/data/images/giveroff-24.png \
 	-resource:$(top_srcdir)/data/images/giver-32.png \
-	-resource:$(top_srcdir)/data/images/giver-44.png 
+	-resource:$(top_srcdir)/data/images/giver-48.png 
+	-resource:$(top_srcdir)/data/images/giver-256.png 
 
 ASSEMBLIES =  \
 	-r:System \
